--- a/tp-tech/package.json
+++ b/tp-tech/package.json
@@ -16,6 +16,7 @@
     "swiper": "^12.1.0"
   },
   "devDependencies": {
+    "@netlify/plugin-nextjs": "^5.15.8",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
